# napari-hollow-vessel-segmentation

./: .gitignore  README.md  pyproject.toml  run_ome_tiff_to_zarr_bioio.sh
.cursor/plans/: skeleton_a_mgac_fe0187a8.plan.md
.cursor/rules/: karpathy-guidelines.mdc
src/: processing.py
src/holvesseg/: __init__.py  _algorithm.py  _bioio_to_omezarr.py  _grow_roi.py  _growth_capture.py  _image_display.py  _io_volume.py  _omezarr_reader.py  _preprocess_ome_tiff.py  _preprocessing_zarr.py  _save_segmentation_zarr.py  _spatial.py  _volume_utils.py  _widget.py  _zarr_compat.py  napari.yaml
src/holvesseg/cli/: __init__.py  ome_tiff_to_zarr_bioio.py  preprocess_ome_tiff.py  preprocess_zarr.py  to_ome_zarr.py
src/regiongrow/: __init__.py  _active_contour.py  _algorithm.py  _bioio_to_omezarr.py  _grow_roi.py  _io_volume.py  _ome_reader.py  _omezarr_reader.py  _preprocess_ome_tiff.py  _preprocessing.py  _preprocessing_zarr.py  _save_segmentation_zarr.py  _spatial.py  _user_local_threshold.py  _volume_utils.py  _widget.py  _zarr_compat.py  napari.yaml
src/regiongrow/cli/: __init__.py  ome_tiff_to_zarr_bioio.py  preprocess_ome_tiff.py  preprocess_zarr.py  run_ome_tiff_to_zarr_bioio.sh  run_preprocess_ome_tiff.sh  to_ome_zarr.py
tests/: test_bioio_to_omezarr.py  test_branch_point_base_size.py  test_branch_point_colors.py  test_branch_point_grid_mapping.py  test_label_load_path.py  test_labels_editing.py  test_labels_snapshot.py  test_ngff_spacing.py  test_omezarr_label_picker.py  test_polyline_masks.py  test_pyramid_axis_steps.py  test_save_segmentation_zarr.py  test_saved_labels_alignment.py  test_zarr_compat.py
