[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "regiongrow"
dynamic = ["version"]
description = "A napari plugin for 3D vessel segmentation using region growing"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    { name = "Microscopy Machine Vision Group" },
]
keywords = ["napari", "segmentation", "vessel", "OME-Zarr", "microscopy", "3D"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]
dependencies = [
    "napari>=0.4.19",
    "qtpy",
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-image>=0.20,<0.26",
    "tifffile>=2022.5.4",
    "pandas>=1.3",
    "zarr>=2.14",
    "ome-zarr>=0.8",
    "numcodecs",
    "dask[array]",
    "bioio>=3",
    "bioio-ome-tiff>=1.0",
    "bioio-ome-zarr>=3",
    "bioio-tifffile>=1.0",
    "bioio-imageio>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-qt",
]

[project.scripts]
regiongrow-convert-to-ome-zarr = "regiongrow.cli.to_ome_zarr:main"
regiongrow-preprocess-zarr = "regiongrow.cli.preprocess_zarr:main"
regiongrow-preprocess-ome-tiff = "regiongrow.cli.preprocess_ome_tiff:main"

[project.entry-points."napari.manifest"]
regiongrow = "regiongrow:napari.yaml"

[tool.setuptools.dynamic]
version = { attr = "regiongrow.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regiongrow = ["napari.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
