[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "holvesseg"
dynamic = ["version"]
description = "Napari plugin for semi-automatic 3D hollow-vessel branch segmentation (MGAC default, optional plain region growing), OME-Zarr/OME-TIFF I/O, and disk preprocessing CLIs."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [
    { name = "Microscopy Machine Vision Group" },
]
keywords = [
    "napari",
    "napari-plugin",
    "holvesseg",
    "hollow-vessel",
    "segmentation",
    "vessel",
    "microscopy",
    "3D",
    "OME-Zarr",
    "NGFF",
    "OME-TIFF",
    "active-contour",
    "MGAC",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]
dependencies = [
    "napari>=0.4.19",
    "qtpy",
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-image>=0.20",
    "tifffile>=2022.5.4",
    "pandas>=1.3",
    "zarr>=2.14",
    "ome-zarr>=0.8",
    "numcodecs",
    "dask[array]",
    "bioio>=3",
    "bioio-ome-tiff>=1.0",
    "bioio-ome-zarr>=3",
    "bioio-tifffile>=1.0",
    "bioio-imageio>=1.0",
    "imageio>=2.9",
    "Pillow>=9",
]

[project.urls]
Homepage = "https://github.com/MMV-Lab/napari-hollow-vessel-segmentation"
Repository = "https://github.com/MMV-Lab/napari-hollow-vessel-segmentation"

[project.scripts]
holvesseg-convert-to-ome-zarr = "holvesseg.cli.to_ome_zarr:main"
holvesseg-preprocess-zarr = "holvesseg.cli.preprocess_zarr:main"
holvesseg-preprocess-ome-tiff = "holvesseg.cli.preprocess_ome_tiff:main"

[project.entry-points."napari.manifest"]
holvesseg = "holvesseg:napari.yaml"

[tool.setuptools.dynamic]
version = { attr = "holvesseg.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
holvesseg = ["napari.yaml"]
